# cpp-2018

./: CMakeLists.txt
exam/: CMakeLists.txt  circular_buffer.h  circular_buffer_testing.cpp  counted.cpp  counted.h  fault_injection.cpp  fault_injection.h  std.cpp  tests.inl
hw/: big_integer_testing.cpp
hw/asm/: mul.asm  sub.asm
hw/bigint/: CMakeLists.txt  big_integer.cpp  big_integer.h  digit_types.h
hw/bigint-optimized/: CMakeLists.txt  big_integer.cpp  big_integer.h  shared_vector.cpp  shared_vector.h
hw/huffman/: CMakeLists.txt
hw/huffman/lib/: _literals.h  code.cpp  code.h  custom_reader.h  custom_writer.h  frequency_info.cpp  frequency_info.h  header_data.cpp  header_data.h  huffman.cpp  huffman.h
hw/huffman/tests/: create_test_files.sh  eq-.txt  huffman_lib_testing.cpp
hw/huffman/tool/: buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  processor.cpp
lab/: lab-01.cpp
